[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/playerMain.gd" type="Script" id=1]
[ext_resource path="res://Resources/Textures/particleSquare.png" type="Texture" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.689873, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.987342, 0.0170454 ), -2.98322, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 600, 0 )
initial_velocity = 350.0
initial_velocity_random = 0.5
angular_velocity = 360.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 20.0
linear_accel_random = 0.5
radial_accel = 100.0
radial_accel_random = 1.0
damping = 50.0
damping_random = 0.5
angle = 720.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 30.714

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.4 ],
"method": "setSpriteAlpha"
}, {
"args": [ 1.0 ],
"method": "setSpriteAlpha"
} ]
}

[node name="playerBody" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="explosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 3.0
one_shot = true
explosiveness = 0.9
visibility_rect = Rect2( -10000, -10000, 20000, 20000 )
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="playerSprite" type="Sprite" parent="."]

[node name="playerDetect" type="CollisionShape2D" parent="."]
z_index = 5
shape = SubResource( 4 )

[node name="playerHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="playerHitboxShape" type="CollisionShape2D" parent="playerHitbox"]
z_index = 5
shape = SubResource( 4 )

[node name="playerAnimationPlayer" type="AnimationPlayer" parent="."]
anims/recuperationTime = SubResource( 5 )

[connection signal="body_entered" from="playerHitbox" to="." method="_on_playerHitbox_body_entered"]
